# agentplane

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
desktop/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ADAPTER_GUIDE.md  API.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  DEPLOYMENT.md
scripts/: demo_agent.py
src/agentplane/: __init__.py  __main__.py
src/agentplane/adapters/: __init__.py  base.py  registry.py
src/agentplane/adapters/builtin/: __init__.py  _cli_base.py  acpx.py  claude.py  codex.py  cursor.py  cursor_cloud.py  gemini.py  grok.py  kimi.py  oanda.py  openclaw.py  opencode.py  orchestrator.py  paper_broker.py  pi.py  process.py  static_data.py
src/agentplane/api/: main.py
src/agentplane/api/routes/: agents.py  companies.py  runs.py  (+7 more)
src/agentplane/cli/: main.py
src/agentplane/core/: config.py  db.py  models.py
src/agentplane/services/: agent_communication_service.py  agent_service.py  autonomous_decision_service.py  journal_service.py  lesson_service.py  llm_service.py  market_data_service.py  memory_service.py  message_service.py  orchestrator_service.py  order_service.py  position_service.py  risk_service.py  run_service.py  scanner_service.py  scheduler.py  signal_service.py  state.py  strategy_file_service.py  trading_service.py
tests/: conftest.py  test_adapters.py  test_api.py  test_execution.py  test_integration_adapters.py  test_integration_api.py  test_journal.py  test_llm_service.py  test_market_data_service.py  test_memory.py  test_oanda_adapter.py  test_orchestrator.py  test_scheduler.py
