[package]
name = "agentplane-desktop"
version = "0.1.0"
description = "Agentplane Desktop Shell"
edition = "2021"

[lib]
name = "agentplane_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net"] }
